<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_count"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/main_count"
        app:layout_constraintBottom_toTopOf="@id/recycler_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_info"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_info"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_count"
        android:layout_marginTop="40dp"
        tools:ignore="ContentDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="222dp"
        android:background="@drawable/bg_radius"
        android:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_count"
        tools:listitem="@layout/item_list" />

    <Button
        android:id="@+id/button_add"
        style="@style/ButtonStyle"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/bg_recycler"
        android:drawableStart="@drawable/ic_add"
        android:paddingStart="15dp"
        android:paddingEnd="25dp"
        android:text="@string/main_button_add"
        android:elevation="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_main" />

    <Button
        android:id="@+id/button_finish"
        style="@style/ButtonStyle"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/bg_button_disabled"
        android:enabled="false"
        android:text="@string/main_button_finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_add" />

</androidx.constraintlayout.widget.ConstraintLayout>